crates/rv/tests/integration_tests/shell_test/snapshots/integration_tests__shell_test__env_test__nu_succeeds.snap
---
source: crates/rv/tests/integration_tests/shell_test/env_test.rs
expression: output.normalized_stdout()
---
{"GEM_HOME":{},"GEM_PATH":{},"PATH":"","RUBYOPT":{},"RUBY_ENGINE":{},"RUBY_ROOT":{},"RUBY_VERSION":{}}
